--- a/login.html
+++ b/login.html
@@ -202,7 +202,7 @@
 
             <label for="registration_number">Registration Number</label>
 
-            <input type="text" id="registerno1" name="registerno1" style="background-color:#FCF5D8;color:#AD8C08;" placeholder="Enter your registration number" required>
+            <input type="text" id="registerno1" name="registerno1" style="background-color:#FCF5D8;color:#AD8C08;" placeholder="Enter your registration number as 2075260" required>
 
             <br/><br/>
 
